--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start" : "node Insert.js"
   },
   "dependencies": {
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "mocha": "~1.12.0"
   },
   "engines": {
     "node": ">=0.8.0"
