--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "insert",
   "version": "0.1.0",
   "scripts": {
-    "start" : "node Insert.js"
+    "start" : "node Insert.js",
+    "test": "make test"
   },
   "dependencies": {
     "grunt": "~0.4.1",
-    "mocha": "~1.12.0"
+    "mocha": "~1.12.0",
+    "chai" : "~1.7.2"
   },
   "engines": {
     "node": ">=0.8.0"
